userapi/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devopsproject-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devopsproject
  template:
    metadata:
      labels:
        app: devopsproject
    spec:
      containers:
        - name: devopsproject-container
          image: devopsproject:version-1.0
          ports:
            - containerPort: 80
