userapi/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsproject-service
spec:
  selector:
    app: devopsproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
