userapi/k8s/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devopsproject-virtual-service
spec:
  hosts:
    - mon-app.example.com
  gateways:
    - devopsproject-gateway
  http:
    - route:
        - destination:
            host: mon-app-service
            port:
              number: 80
          weight: 90
        - destination:
            host: mon-app-service-v2
            port:
              number: 80
          weight: 10
